For a detailed view of what has changed, refer to the {url-repo}/commits/main[commit history] on GitHub.

== Unreleased

Enhancements::

* allow hyphenation to be turned on and configured using the `base-hyphens` key in the theme (#2161)

Improvements::

* reclassify and mark which methods in the converter are private

Bug Fixes::

* apply top line height padding to first line of text when text runs to top of next page (#2173)
* don't add entry to outline for notitle section if no content follows it
* don't add entry to TOC for notitle section if no content follows it
* look for block align roles on image instead of text align roles (#2176)
* use correct left value when creating bounding box

== 2.0.0.beta.2 (2022-05-14) - @mojavelinux

Enhancements::

* add support for float attribute on image; wrap ensuing paragraphs around image with `float` attribute (#353)
* add `supports_float_wrapping?` method for extended converter to override to enlist other blocks in float wrapping; add example to docs (#353)
* add `image-float-gap` key to theme to control space around image float (#353)
* add support for `text-transform` property on first line of abstract in theme (#2141)
* rename `resolve_alignment_from_role` to `resolve_text_align_from_role` to reflect proper terminology and purpose; alias old method name
* add support for orphan avoidance to discrete headings to match behavior of section titles (using call to `arrange_heading`) (#2151)
* rename `arrange_section` to `arrange_heading` to reflect proper terminology and purpose
* add `index-column-gap` key to theme to control size of gap between columns
* coerce `image-caption-max-width` to `fit-content` if `float` attribute is set on block image (#2150)
* add support for text box with fixed height via `:height` option to `typeset_text` helper
* configure `typeset_text` and `ink_prose` to return remaining fragments when `:height` option is specified