@@ -1,6 +1,7 @@
 # frozen_string_literal: true
 
 # NOTE: these are either candidates for inclusion in Asciidoctor core or backports
+require_relative 'asciidoctor/abstract_block'
 require_relative 'asciidoctor/document'
 require_relative 'asciidoctor/section'
 require_relative 'asciidoctor/list'
